<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <com.wayfoo.wayfoo.helper.MyViewPager
        android:id="@+id/viewPagerVertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/layout_sms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingBottom="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="20dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="25dp"
                        android:layout_marginTop="20dp"
                        android:src="@mipmap/logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:inputType="textCapWords"
                        android:paddingLeft="40dp"
                        android:paddingRight="40dp"
                        android:text="@string/msg_enter_mobile"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/inputMobile"
                            android:layout_width="240dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:hint="@string/lbl_mobile"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:padding="5dp"
                            android:textColor="@android:color/black"
                            android:textCursorDrawable="@null"
                            android:textSize="18dp" />

                        <ProgressBar
                            android:id="@+id/progressBar"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:indeterminateTint="@color/colorAccent"
                            android:indeterminateTintMode="src_atop"
                            android:visibility="gone" />

                        <Button
                            android:id="@+id/btn_request_sms"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="25dp"
                            android:padding="5dp"
                            android:text="@string/lbl_next"
                            android:textSize="14dp" />
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_otp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingBottom="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="20dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="25dp"
                        android:layout_marginTop="20dp"
                        android:src="@mipmap/logo" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:gravity="center_horizontal"
                        android:paddingLeft="40dp"
                        android:paddingRight="40dp"
                        android:text="@string/msg_sit_back"
                        android:textColor="@android:color/black"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:gravity="center_horizontal"
                        android:paddingLeft="40dp"
                        android:paddingRight="40dp"
                        android:text="@string/msg_manual_otp"
                        android:textColor="@android:color/black"
                        android:textSize="12dp" />

                    <EditText
                        android:id="@+id/inputOtp"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="@color/bg_color"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:hint="@string/lbl_enter_otp"
                        android:inputType="number"
                        android:maxLength="6"
                        android:padding="10dp"
                        android:textCursorDrawable="@null"
                        android:textSize="18dp" />

                    <Button
                        android:id="@+id/btn_verify_otp"
                        style="@style/MyMaterialTheme.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="25dp"
                        android:padding="12dp"
                        android:text="@string/lbl_submit" />

                    <ProgressBar
                        android:id="@+id/progressbar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:indeterminate="false"
                        android:indeterminateTint="@color/colorAccent"
                        android:indeterminateTintMode="src_atop"
                        android:max="120"
                        android:progress="0" />

                    <Button
                        android:id="@+id/tryagain"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="40dp"
                        android:padding="5dp"
                        android:text="Edit Number"
                        android:textSize="14dp"
                        android:visibility="visible" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </com.wayfoo.wayfoo.helper.MyViewPager>

    <LinearLayout
        android:id="@+id/layout_edit_mobile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_edit_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <ImageButton
            android:id="@+id/btn_edit_mobile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/smartphone" />
    </LinearLayout>

</RelativeLayout>